Game done (UI not yet)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <button id="buttonStart" type="button">Start</button>
+    <button id="buttonRandom" type="button">Random</button>
+    <input id="gridOn" type="checkbox" name="gridOn" checked> Grid On
+    <input id="fps" type="range" name="fps" min="1" max="60"> FPS (1, 60)
+
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
