Corners now fine

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <canvas id="canvas"></canvas>
     <button id="buttonStart" type="button">Start</button>
+    <button id="buttonStop" type="button">Stop</button>
     <button id="buttonRandom" type="button">Random</button>
     <input id="gridOn" type="checkbox" name="gridOn" checked> Grid On
     <input id="fps" type="range" name="fps" min="1" max="60"> FPS (1, 60)
