--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="index.css">
+
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <canvas id="canvasCount"></canvas>
+    <div id="plots">
+      <div id="tester"></div>
+      <div id="singleValue"></div>
+    </div>
     <button id="buttonStart" type="button">Start</button>
     <button id="buttonStop" type="button">Stop</button>
     <button id="buttonRandom" type="button">Random</button>
